Correctly aligned follow menu in RTL interface
Fixed #3172

--- a/weblate/static/bootstrap/css/bootstrap.css
+++ b/weblate/static/bootstrap/css/bootstrap.css
@@ -2725,6 +2725,11 @@ tbody.collapse.in {
   right: 0;
   left: auto;
 }
+.dir-rtl .pull-right > .dropdown-menu {
+  left: 0;
+  right: auto;
+}
+
 .dropup .caret,
 .navbar-fixed-bottom .dropdown .caret {
   content: "";
